--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_0dd42dbca4c2_key -iv $encrypted_0dd42dbca4c2_iv
-  -in deploy_key.enc -out ~\/.ssh/deploy_key -d
+  -in deploy_key.enc -out deploy_key -d
 
 deploy:
   provider: pages
