Update travis to use "main" branch (was "master")

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ script:
 - make ci
 branches:
   only:
-  - master
+  - main
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_189e52c2c347_key -iv $encrypted_189e52c2c347_iv
   -in deploy_key.enc -out deploy_key -d
@@ -12,7 +12,7 @@ deploy:
   local_dir: out
   deploy_key: deploy_key
   edge:
-    branch: master
+    branch: main
 notifications:
   email:
     on_success: never
