Attempt to fix travis yml
IIUC edge: branch: refers to the branch where travis ci tooling lives, not our repo branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   local_dir: out
   deploy_key: deploy_key
   edge:
-    branch: main
+    branch: master
 notifications:
   email:
     on_success: never
