[spec-prod] Make the toolchain explicit
The spec-prod action fails to detect that the specs are Bikeshed documents
(likely because filenames don't end with `.bs`).

--- a/.github/workflows/pr-push.yml
+++ b/.github/workflows/pr-push.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Build and validate index.html, push to gh-pages branch if needed
         uses: w3c/spec-prod@v2
         with:
+          TOOLCHAIN: bikeshed
           SOURCE: ${{ matrix.source }}
           DESTINATION: ${{ matrix.destination }}
           BUILD_FAIL_ON: warning
