--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -38,6 +38,11 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_AVC_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: vorbis_codec_registration.src.html
+            destination: vorbis_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_VORBIS_REGISTRATION
+            build_override: |
+              status: NOTE-WD
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
       - name: Checkout repository
