Add the Opus codec to the registry

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -53,6 +53,11 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_FLAC_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: opus_codec_registration.src.html
+            destination: opus_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_OPUS_REGISTRATION
+            build_override: |
+              status: NOTE-WD
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
       - name: Checkout repository
