--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ avc_codec_registration.html
 codec_registry.html
 vorbis_codec_registration.html
 mp3_codec_registration.html
-flac_codec_registration.src.html
+flac_codec_registration.html
+opus_codec_registration.html
 /index.html
 out/
 
