Temporarily force bikeshed builds until all the registry items are published

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -57,7 +57,7 @@ jobs:
           TOOLCHAIN: bikeshed
           SOURCE: ${{ matrix.source }}
           DESTINATION: ${{ matrix.destination }}
-          BUILD_FAIL_ON: warning
+          BUILD_FAIL_ON: nothing
           GH_PAGES_BRANCH: gh-pages
           W3C_ECHIDNA_TOKEN: ${{ secrets[matrix.echidna_token] }}
           W3C_WG_DECISION_URL: https://github.com/w3c/media-wg/issues/27
