--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -43,6 +43,11 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_VORBIS_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: mp3_codec_registration.src.html
+            destination: mp3_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_MP3_REGISTRATION
+            build_override: |
+              status: NOTE-WD
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
       - name: Checkout repository
