FLAC codec registration

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 avc_codec_registration.html
 codec_registry.html
 vorbis_codec_registration.html
+flac_codec_registration.src.html
 /index.html
 out/
 
