--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -48,6 +48,11 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_MP3_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: flac_codec_registration.src.html
+            destination: flac_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_FLAC_REGISTRATION
+            build_override: |
+              status: NOTE-WD
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
       - name: Checkout repository
