--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ avc_codec_registration.html
 codec_registry.html
 vorbis_codec_registration.html
 flac_codec_registration.src.html
+av1_codec_registration.src.html
 /index.html
 out/
 
