--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ codec_registry.html
 vorbis_codec_registration.html
 flac_codec_registration.src.html
 av1_codec_registration.src.html
+vp9_codec_registration.src.html
 /index.html
 out/
 
