Add VP8 to the codec registry.
As titled. This adds VP8 to the registry following the model used by recent
audio codec registry additions like FLAC.

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -53,6 +53,11 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_AV1_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: vp8_codec_registration.src.html
+            destination: vp8_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_AV1_REGISTRATION
+            build_override: |
+              status: NOTE-WD
           - source: vp9_codec_registration.src.html
             destination: vp9_codec_registration.html
             echidna_token: ECHIDNA_TOKEN_AV1_REGISTRATION
