--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ vorbis_codec_registration.html
 flac_codec_registration.src.html
 av1_codec_registration.src.html
 vp9_codec_registration.src.html
+vp8_codec_registration.src.html
 /index.html
 out/
 
