Publish workflow: deploy images first
Images under the "images" folder were not published to GitHub Pages, resulting
in broken links in the spec.

In addition, images that are referenced by the WebCodecs spec need to be
published to Github Pages before publication to /TR occurs, since publication
to /TR makes a copy of the image. This update makes the job that takes care
of publishing specs to /TR depend on the job that publishes the images.

The job that publishes the images is similar to the one used to deploy samples.

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -16,7 +16,23 @@ on:
   workflow_dispatch:
 
 jobs:
+  images:
+    runs-on: ubuntu-20.04
+    steps:
+      # See doc at https://github.com/actions/checkout#checkout-v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # See doc at https://github.com/marketplace/actions/deploy-to-github-pages
+      - name: Deploy images
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages
+          folder: images
+          target-folder: images
+
   main:
+    needs: images
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
