--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -17,6 +17,8 @@ on:
 
 jobs:
   images:
+    # Only deploy images on pushes to main branch
+    if: github.event_name == 'push'
     runs-on: ubuntu-20.04
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
@@ -32,6 +34,9 @@ jobs:
           target-folder: images
 
   main:
+    # Run main job after images one, regardless of its outcome (the images job
+    # does not run on PRs in particular, so won't be "successful" in such cases)
+    if: always()
     needs: images
     runs-on: ubuntu-20.04
     strategy:
