--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /index.html
-av1_codec_registration.src.html
+av1_codec_registration.html
 avc_codec_registration.html
 codec_registry.html
 flac_codec_registration.html
@@ -7,5 +7,5 @@ mp3_codec_registration.html
 opus_codec_registration.html
 out/
 vorbis_codec_registration.html
-vp8_codec_registration.src.html
-vp9_codec_registration.src.html
+vp8_codec_registration.html
+vp9_codec_registration.html
