Add AAC to the registry

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -48,6 +48,11 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_MP3_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: aac_codec_registration.src.html
+            destination: aac_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_AAC_REGISTRATION
+            build_override: |
+              status: NOTE-WD
           - source: flac_codec_registration.src.html
             destination: flac_codec_registration.html
             echidna_token: ECHIDNA_TOKEN_FLAC_REGISTRATION
@@ -60,7 +65,7 @@ jobs:
               status: NOTE-WD
           - source: av1_codec_registration.src.html
             destination: av1_codec_registration.html
-            echidna_token: ECHIDNA_TOKEN_AV1_REGISTRATION              
+            echidna_token: ECHIDNA_TOKEN_AV1_REGISTRATION
             build_override: |
               status: NOTE-WD
           - source: vp9_codec_registration.src.html
