--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ avc_codec_registration.html
 codec_registry.html
 flac_codec_registration.html
 mp3_codec_registration.html
+aac_codec_registration.html
 opus_codec_registration.html
 out/
 vorbis_codec_registration.html
