Add alaw and ulaw codec registrations

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /index.html
+alaw_codec_registration.html
 av1_codec_registration.html
 avc_codec_registration.html
 codec_registry.html
@@ -7,6 +8,7 @@ mp3_codec_registration.html
 aac_codec_registration.html
 opus_codec_registration.html
 out/
+ulaw_codec_registration.html
 vorbis_codec_registration.html
 vp8_codec_registration.html
 vp9_codec_registration.html
