Update publish & ignore file w/ new registrations

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -78,6 +78,21 @@ jobs:
             echidna_token: ECHIDNA_TOKEN_VP8_REGISTRATION
             build_override: |
               status: NOTE-WD
+          - source: pcm_codec_registration.src.html
+            destination: pcm_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_PCM_REGISTRATION
+            build_override: |
+              status: NOTE-WD
+          - source: alaw_codec_registration.src.html
+            destination: alaw_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_ALAW_REGISTRATION
+            build_override: |
+              status: NOTE-WD
+          - source: ulaw_codec_registration.src.html
+            destination: ulaw_codec_registration.html
+            echidna_token: ECHIDNA_TOKEN_ULAW_REGISTRATION
+            build_override: |
+              status: NOTE-WD
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
       - name: Checkout repository
