--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ ulaw_codec_registration.html
 vorbis_codec_registration.html
 vp8_codec_registration.html
 vp9_codec_registration.html
+pcm_codec_registration.html
+alaw_codec_registration.html
+ulaw_codec_registration.html
