Introduce metadata registry

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ out/
 pcm_codec_registration.html
 ulaw_codec_registration.html
 ulaw_codec_registration.html
+video_frame_metadata_registry.html
 vorbis_codec_registration.html
 vp8_codec_registration.html
 vp9_codec_registration.html
