Address some of Chris's feedback

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -99,8 +99,8 @@ jobs:
             build_override: |
               status: NOTE-WD
           - source: video_frame_metadata_registry.src.html
-            destination: video_frame_metadata_registry..html
-            echidna_token: ECHIDNA_TOKEN_HEVC_REGISTRATION
+            destination: video_frame_metadata_registry.html
+            echidna_token: ECHIDNA_TOKEN_VIDEOFRAMEMETADATA_REGISTRY
             build_override: |
               status: NOTE-WD
     steps:
