--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -102,7 +102,7 @@ jobs:
             destination: video_frame_metadata_registry.html
             echidna_token: ECHIDNA_TOKEN_VIDEOFRAMEMETADATA_REGISTRY
             build_override: |
-              status: NOTE-WD
+              status: DRY
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
       - name: Checkout repository
