update platform from ubuntu-20.04 to ubuntu-latest

--- a/.github/workflows/deploy-images.yml
+++ b/.github/workflows/deploy-images.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
