--- a/.github/workflows/deploy-samples.yml
+++ b/.github/workflows/deploy-samples.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       # See doc at https://github.com/actions/checkout#checkout-v2
